--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "allowSyntheticDefaultImports": true,
+    "module": "esnext", 
+    "target": "esnext", 
   },
   "include": [
     "**/*.ts",
